--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,17 @@ caption{
     list-style-type: none;
 }
 
+.images{
+    padding: 2rem 0;
+    display: flex;
+    gap: 50px;
+    overflow-x: scroll;
+}
+
+.images img{
+    border-radius: 8px;
+}
+
 @media (min-width: 720px) {
     .container{
         width: 65%;
