--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,36 @@ img{
     max-width: 100%;
 }
 
+nav{
+    position: fixed;
+    left: 0;
+    top: 20px;
+}
+
+.nav__list{
+    list-style-type: none;
+}
+
+.nav__item{
+    padding: 0.55rem 1rem;
+    background-color: cornflowerblue;
+    border: 1px solid black;
+    transition: all 0.5s ease-in;
+    border-radius: 0 8px 8px 0;
+}
+
+.nav__item:hover{
+    background-color: rgb(59, 120, 232);
+    transform: scaleX(1.2);
+    transform-origin: left;
+    transition: all 0.5s ease-in;
+}
+
+.nav__link{
+    text-decoration: none;
+    color: white;
+}
+
 section{
     text-align: center;
     padding-block: 3rem;
